# web-task-8

web-task-8/: main.py  pyproject.toml
web-task-8/RabbitMQ/: consumer.py  producer.py
web-task-8/RabbitMQ/mock/: config.ini  connect.py  models.py
web-task-8/src/: config.ini  connect.py  models.py  seeds.py
