[tool.poetry]
name = "web-task-8"
version = "0.1.0"
description = ""
authors = ["Vladyslav Chaban <dma.employee.v@gmail.com>"]
readme = "README.md"
packages = [{include = "web_task_8"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
redis = "^4.5.1"
pika = "^1.3.1"
mongoengine = "^0.27.0"
redis-lru = "^0.1.2"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
